Render page metadata

--- a/webpack/index.html
+++ b/webpack/index.html
@@ -5,7 +5,8 @@
     <meta name="language" content="en">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta name="author" content="Alex Ostrovski">
-    <title>Voting</title>
+    <meta name="keywords" content="poll, cryptography">
+    <meta name="og:type" content="article">
   </head>
   <body>
     <div id="app-root"></div>
