Add app favicon

--- a/webpack/index.html
+++ b/webpack/index.html
@@ -7,6 +7,10 @@
     <meta name="author" content="Alex Ostrovski">
     <meta name="keywords" content="poll, cryptography">
     <meta name="og:type" content="article">
+
+    <link rel="icon" type="image/png" sizes="48x48" href="/_assets/css/favicon-48x48.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/_assets/css/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/svg+xml" href="/_assets/css/favicon.svg">
   </head>
   <body>
     <div id="app-root"></div>
